# nrefocus

./: .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: check.yml  deploy_pypi.yml
doc/: README.md  conf.py  content_theory.txt  deploy_ghpages.py  index.rst
docs/: .gitignore  README.md  code_reference.rst  conf.py  content_theory.txt  examples.rst  index.rst  introduction.rst  nrefocus.bib  requirements.txt  sec_changelog.rst  sec_code_reference.rst  sec_examples.rst  sec_ndarray_backend.rst  sec_theory.rst  theory.rst
docs/extensions/: fancy_include.py
examples/: compare_metrics.py  example_helper.py  refocus_cell.py  refocus_cell_cupy.py  refocus_cell_fftw.py
nrefocus/: __init__.py  _autofocus.py  _ndarray_backend.py  _propagate.py  _version.py  autof.py  legacy.py  metrics.py  nr_version.py  pad.py  propg.py  roi_handling.py  roi_handling_cleaner.py
nrefocus/iface/: __init__.py  base.py  rf_cupy.py  rf_numpy.py  rf_numpy_1d.py  rf_pyfftw.py
nrefocus/metrics/: __init__.py  mt_avg_grad.py  mt_med_grad.py  mt_rms_contrast.py  mt_spectrum.py  mt_std_grad.py
nrefocus/minimizers/: __init__.py  mz_legacy.py  (+1 more)
tests/: README.md  conftest.py  helper_methods.py  test_1d_refocus.py  test_2d_autofocus.py  test_2d_autofocus_legacy.py  test_2d_refocus.py  test_ndarray_backend.py  test_pad.py  test_prop_kernel.py  test_refocus_compute_metric.py  test_refocus_numpy.py  test_refocus_numpy_1d.py  test_refocus_pyfftw.py  test_roi_handling.py
(+6 files in other folders)
